<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginData"
            type="com.example.securemoneytransfersystemwithuwb.viewModels.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.LoginActivity">

        <ImageView
            android:id="@+id/img_app_logo"
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/app_logo_black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/email"
            android:textAppearance="@style/username"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_app_logo" />

        <EditText
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/form"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:text="@={loginData.email}"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_label" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:lineSpacingExtra="4sp"
            android:text="@string/password"
            android:textAppearance="@style/username"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail" />

        <EditText
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/form"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:text="@={loginData.password}"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_label" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/button_color"
            android:onClick="@{() -> loginData.onClickedLoginButton()}"
            android:text="@string/login"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="@id/textInputLayoutPassword"
            app:layout_constraintStart_toStartOf="@+id/textInputLayoutPassword"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword" />

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="111dp"
            android:layout_height="24dp"
            android:layout_marginTop="15dp"
            android:lineSpacingExtra="5sp"
            android:onClick="@{() -> loginData.onClickedForgotPassword()}"
            android:text="@string/forgot_password"
            android:textColor="@color/button_color"
            android:translationY="-2.45sp"
            app:layout_constraintRight_toRightOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />


        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:onClick="@{() -> loginData.onClickedSignUp()}"
            android:text="Don’t have an account? Create Account"
            android:textColor="#7F909F"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>